# CompilerGym

./: .bazelrc  .buildinfo  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  BUILD.bazel  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Makefile  PreLoad.cmake  README.md  WORKSPACE  about.html  changelog.html  cli.html  cmake.sh  codecov.yml  contributing.html  faq.html  genindex.html  getting_started.html  index.html  installation.html  objects.inv  prototool.yaml  py-modindex.html  requirements.txt  requirements_pre_commit.txt  rpc.html  search.html  searchindex.js  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: --bug-report.md  --documentation.md  --feature-request.md  --questions-help-support.md
.github/workflows/: build.yaml  ci.yaml  codeql.yaml  coverage.yaml  docker_build.yaml  fuzz.yaml  pip_install_test.yaml  pre_commit.yaml  release_build.yaml  release_test.yaml  sanitizers.yaml
_modules/: index.html
_modules/compiler_gym/: compiler_env_state.html  validate.html  validation_error.html  validation_result.html
_sources/: about.rst.txt  changelog.rst.txt  cli.rst.txt  contributing.rst.txt  faq.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  rpc.rst.txt
_sources/compiler_gym/: envs.rst.txt  service.rst.txt  spaces.rst.txt  views.rst.txt  wrappers.rst.txt
_sources/envs/: gcc.rst.txt
_sources/llvm/: api.rst.txt  index.rst.txt
_sources/tutorial/: example_service.rst.txt  makefile_integration.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
_static/git/: index.html
benchmarks/: BUILD  bench_test.py  parallelization_load_test.py  parallelization_load_test_test.py
build_tools/: collect_env.py  set_version.sh
build_tools/cmake/: FindAndEnableCcache.cmake  FindAndEnableLld.cmake  FindBazel.cmake  FindClog.cmake  FindCsmith.cmake  FindLabm8.cmake  FindProGraML.cmake  FindSubprocess.cmake  build_external_cmake_project.cmake  build_runtime_emscripten.sh  cg_add_all_subdirs.cmake  cg_cc_binary.cmake  cg_cc_library.cmake  cg_cc_test.cmake  cg_copts.cmake  cg_filegroup.cmake  cg_genrule.cmake  cg_installed_test.cmake  cg_macros.cmake  cg_py_binary.cmake  cg_py_library.cmake  cg_py_test.cmake  cg_python.cmake  cg_target_outputs.cmake  cmake_add_all_subdirs copy.cmake  cmake_add_all_subdirs.cmake  cmake_cc_binary.cmake  cmake_cc_library.cmake  cmake_cc_test.cmake  cmake_genrule.cmake  cmake_py_binary.cmake  cmake_py_library.cmake  cmake_py_test.cmake  cmake_python.cmake  external_cc_library.cmake  flatbuffer_c_library.cmake  grpc.cmake  protobuf.cmake  riscv.toolchain.cmake  run_test.sh  (+3 more)
cc/compiler_gym/: service.html  util.html
compiler_gym/: BUILD  CMakeLists.txt  __init__.py  compiler_env_state.py  compiler_gym.html  datasets.html  envs.html  leaderboard.html  make_config.py  random_replay.py  random_search.py  requirements.txt  requirements_build.txt  service.html  spaces.html  test_jotai.py  validate.py  validation_error.py  validation_result.py  views.html  wrappers.html
compiler_gym/datasets/: BUILD  CMakeLists.txt  __init__.py  benchmark.py  dataset.py  datasets.py  files_dataset.py  tar_dataset.py  uri.py
compiler_gym/envs/: BUILD  CMakeLists.txt  __init__.py  client_service_compiler_env.py  compiler_env.py  env.py  gcc.html
compiler_gym/errors/: BUILD  CMakeLists.txt  __init__.py  dataset_errors.py  download_errors.py  service_errors.py  validation_errors.py
compiler_gym/leaderboard/: BUILD  CMakeLists.txt  __init__.py  llvm_codesize.py  llvm_instcount.py
compiler_gym/service/: BUILD  CMakeLists.txt  CompilationSession.cc  CompilationSession.h  CompilerGymServiceContext.cc  CompilerGymServiceContext.h  __init__.py  client_service_compiler_env.py  compilation_session.py  compiler_gym_service_context.py  connection.py  connection_pool.py  in_process_client_compiler_env.py  proto2py.py  runtime.html  service_cache.py
compiler_gym/spaces/: BUILD  CMakeLists.txt  __init__.py  action_space.py  box.py  commandline.py  common.py  dict.py  discrete.py  named_discrete.py  permutation.py  reward.py  runtime_reward.py  runtime_series_reward.py  scalar.py  sequence.py  space_sequence.py  tuple.py
compiler_gym/util/: BUILD  CMakeLists.txt  EnumUtil.h  GrpcStatusMacros.h  RunService.cc  RunService.h  RunServiceImpl.h  RunfilesPath.cc  RunfilesPath.h  StrLenConstexpr.h  Subprocess.cc  Subprocess.h  Unreachable.h  capture_output.py  commands.py  debug_util.py  decorators.py  download.py  executor.py  filesystem.py  gym_type_hints.py  logging.py  logs.py  minimize_trajectory.py  parallelization.py  permutation.py  registration.py  runfiles_path.py  shell_format.py  statistics.py  tabulate.py  temporary_working_directory.py  timer.py  (+3 more)
docs/: .gitignore  Doxyfile  Makefile  generate_cc_rst.py  make.bat  requirements.txt
envs/: gcc.html  loop_tool.html  mlir.html
examples/: .gitignore  BUILD  CMakeLists.txt  MANIFEST.in  Makefile  README.md  RandomSearch.cc  actor_critic.py  actor_critic_test.py  brute_force.py  brute_force_test.py  explore.py  explore_test.py  gcc_search.py  gcc_search_test.py  getting-started.ipynb  loop_tool_sweep.py  op_benchmarks.py  random_walk.py  random_walk_test.py  requirements.txt  rllib.ipynb  rllib_example.ipynb  run_loop_tool_sweep.py  run_loop_tool_sweep.sh  setup.py  tabular_q.py  tabular_q_test.py
examples/example_unrolling_service/loop_unroller/standalone_build/: CMakeLists.txt  Makefile
explorer/: index.html
leaderboard/: SUBMISSION_TEMPLATE.md  requirements.txt
llvm/: api.html  index.html
packaging/: Dockerfile  container_init.sh  set_version.sh
tests/: BUILD  CMakeLists.txt  TestMacros.h  TestMain.cc  compiler_env_state_test.py  compiler_env_test.py  env_copy_test.py  fixtures.py  make_test.py  random_search_test.py  requirements.txt  test_main.py  validate_test.py  validation_result_test.py  version_test.py
tutorial/: example_service.html  makefile_integration.html  reinforcement_learning.html
www/: Dockerfile  README.md  demo_api.py  requirements.txt  run.py  set_api_ip.sh  www.py
(+809 files in other folders)
